--- a/style.css
+++ b/style.css
@@ -4,19 +4,55 @@ body {
     line-height: 1.428571429;
     color: #333333;
     background-repeat: repeat;
+    margin: 20px;
  }
- 
- 
- header {
-      width: 900px ;
-      margin-left: auto ;
-      margin-right: auto ;
- }
- div #topHeaderRow {
+
+
+ div#topHeaderRow {
     background-color: #222222;
-    font-size: 0.9em;
+    font-size: 1.5em;
     height: 3em;
     line-height: 3em;
     padding-right: 1em;
     text-align: right;
  }
+ nav  ul{
+    list-style-type: none;
+ }
+ nav  ul li {
+    display: inline;
+ }
+ nav  ul li  a{
+    text-decoration: none;
+ }
+ div#topHeaderRow  a {
+    color: #999999;
+    margin-right: 2em;
+ }
+
+ .item1 {
+   grid-area: video1;
+ }
+ .item2 {
+   grid-area: example1;
+ }
+ .item3 {
+   grid-area: video2;
+ }
+ .item4 {
+   grid-area: example2;
+ }
+ .item5 {
+   grid-area: buttons;
+ }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+  'video1 example1'
+  'buttons buttons'
+  'video2 example2';
+  gap: 10px;
+  padding: 10px;
+  text-align: center;
+}
