--- a/login_style.css
+++ b/login_style.css
@@ -1,14 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Poppins';
+
+}
+
+
+
 body {
-  background-image: url('rm283-adj-013_2.jpg');
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 40px;
+
+  background-image: url('loginBG.jpg');
   line-height: 1.428571429;
-  color: #333333;
+  color: white;
   background-repeat: repeat;
   margin: 20% 10%;
   text-align: center;
+  font-family: 'Poppins', sans-serif;
 }
 
 input {
   font-size: 40px;
+}
+
+
+
+
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+div {
+  margin: 2em;
+  border-radius: 2em;
+
 }
