--- a/start_style.css
+++ b/start_style.css
@@ -16,3 +16,27 @@ div#topHeaderRow {
   padding-right: 1em;
   text-align: center;
 }
+
+.box {
+  background-color: rgb(86, 128, 225);
+  color: white;
+  padding: 10px;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 10px;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.button:hover {
+  background-color: #2980b9;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
